# Python_Archives

./: gpt.py
MOD_01/: README.md
MOD_01/ex0/: ft_garden_intro.py
MOD_01/ex1/: ft_garden_data.py
MOD_01/ex2/: ft_plant_growth.py
MOD_01/ex3/: ft_plant_factory.py
MOD_01/ex4/: ft_garden_security.py
MOD_01/ex6/: ft_garden_analytics.py
MOD_02/: README.md
MOD_02/ex0/: ft_first_exception.py
MOD_02/ex1/: ft_different_errors.py
MOD_02/ex2/: ft_custom_errors.py
MOD_02/ex3/: ft_finally _block.py
MOD_02/ex4/: ft_raise_errors.py
MOD_02/ex5/: ft_garden_management.py
MOD_03/: README.md
MOD_03/ex0/: ft_command_quest.py
MOD_03/ex1/: ft_score_analytics.py
MOD_03/ex2/: ft_coordinate_system.py
MOD_03/ex3/: ft_achievement_tracker.py
MOD_03/ex4/: ft_inventory_system.py
MOD_03/ex5/: ft_data_stream.py
MOD_03/ex6/: ft_analytics_dashboard.py
MOD_04/: README.md
MOD_04/ex0/: ft_ancient_text.py
MOD_04/ex1/: ft_archive_creation.py
MOD_04/ex2/: ft_stream_management.py
MOD_04/ex3/: ft_vault_security.py
MOD_04/ex4/: ft_crisis_response.py
MOD_05/: README.md
MOD_05/ex0/: stream_processor.py
MOD_05/ex1/: data_stream.py
MOD_05/ex2/: nexus_pipeline.py
MOD_07/: README.md
MOD_07/ex0/: Card.py  CreatureCard.py  (+2 more)
MOD_08/: README.md
MOD_08/ex1/: loading.py  pyproject.toml
MOD_10/: NOTES.md  README.md
MOD_6/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
ex2/: ft_plant_growth.py
ex3/: ft_plant_factory.py
ex4/: ft_garden_security.py
ex5/: ft_plant_types.py
ex6/: ft_garden_analytics.py
(+48 files in other folders)
